--- a/arrival.css
+++ b/arrival.css
@@ -1,7 +1,7 @@
 html,
 body{
-    max-width: 1400px;
-    min-width: 1400px;
+    max-width: 1500px;
+    min-width: 1500px;
     margin: auto;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -163,6 +163,7 @@ hr{
     font-weight: 700;
     line-height: 44.8px;
     color: #060606;
+    margin-right:95px;
 }
 .more a{
     text-decoration: none;
